--- a/css files/style.css
+++ b/css files/style.css
@@ -71,6 +71,17 @@ nav ul{
   font-weight: bold;
 }
 
+.hero-img{
+  width: 100%;
+  height: 20rem;
+}
+
+@media screen and (max-width: 760px) {
+  .hero-img{
+    height: 24rem;
+  }
+}
+
 .hero .sub-hero{
   font-size: 15px;
   letter-spacing: 0.2rem;
@@ -158,4 +169,41 @@ button:hover{
 .container3 .enroll a{
   text-decoration: none;
   color: chocolate;
+}
+
+.container4{
+  background-image: url(./images/thomas-de-luze-7B23kRBDCEY-unsplash.jpg);
+  background-size: cover;
+  padding: 1.5rem;
+  text-align: center;
+}
+
+.container4 h2{
+  color: white;
+  background-color: rgba(210, 105, 30, 0.659);
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.container4 .sub-container4{
+  background-color: rgba(39, 38, 38, 0.672);
+  padding: 1rem;
+  text-align: center;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.container4 .sub-container4 img{
+  width: 5rem;
+}
+
+.container4 .sub-container4-text{
+  padding: 1rem;
+  background-color: white;
+  border-radius: 5px;
+}
+
+footer{
+  background-color: black;
+  color: white;
 }
