--- a/css files/style.css
+++ b/css files/style.css
@@ -3,6 +3,10 @@
   margin: 0;font-family: "poppins" sans-serif;
 }
 
+body{
+  background-color: grey;
+}
+
 
 header{
   padding: 1rem;
@@ -153,6 +157,32 @@ button:hover{
   border-radius: 6px;
 }
 
+@media screen and (max-width: 760px) {
+  .collaborate{
+    padding: 3rem;
+  }
+}
+
+.collaborate{
+  background-color: rgb(197, 193, 193);
+  display: flex;
+  padding: 2rem;
+  justify-content: space-between;
+  text-align: center;
+}
+
+.collaborate img{
+  width: 5rem;
+}
+
+.collaborate .police{
+  text-align: center;
+  background-color: rgb(197, 197, 195);
+  padding: 1.5rem;
+  border-radius: 5px;
+  box-shadow: 2px 2px 8px black;
+}
+
 .container3{
   background-color: black;
   color: white;
@@ -201,6 +231,18 @@ button:hover{
   padding: 1rem;
   background-color: white;
   border-radius: 5px;
+}
+
+.company{
+  text-align: center;
+}
+
+.company h3{
+  color: green;
+}
+
+.company h4{
+  color: blue;
 }
 
 footer{
