--- a/css files/services.css
+++ b/css files/services.css
@@ -59,47 +59,15 @@ nav ul{
   justify-content: space-around;
 }
 
-.container{
-  padding: 1.5rem;
-  color: white;
+button{
+  padding: 0.8rem 1rem;
   border-style: none;
-  border-top: none;
-  border-left: none;
-  border-right: none;
-  position: absolute;
-  top: 11rem;
-}
-
-.hero{
-  font-size: 2.5rem;
+  background-color: chocolate;
+  color: whitesmoke;
+  border-radius: 5px;
+  box-shadow: 1px 1px 4px black;
+  letter-spacing: 0.1rem;
   font-weight: bold;
-}
-
-.hero-img{
-  width: 100%;
-  height: 20rem;
-}
-
-@media screen and (max-width: 760px) {
-  .hero-img{
-    height: 24rem;
-  }
-}
-
-.hero .sub-hero{
-  font-size: 15px;
-  letter-spacing: 0.2rem;
-  font-weight: normal;
-}
-
-.sub-container{
-  text-align: left;
-  line-height: 1.5rem;
-}
-
-.buttons{
-  display: flex;
-  gap: 1rem;
 }
 
 button{
@@ -118,90 +86,6 @@ button:hover{
   color: rgb(1, 1, 79);
   transition: 0.2s ease-in;
   padding: 0.8rem 2rem;
-}
-
-.container2{
-  padding: 1.5rem;
-  text-align: center;
-  background-color: grey;
-}
-
-.container2 .container-text{
-  text-align: center;
-  background-color: rgb(234, 234, 234);
-  padding: 1rem;
-  box-shadow: 1px 1px 8px rgb(1, 1, 79);
-  border-radius: 5px;
-}
-
-.container2 .container-text .tab{
-  background-color: white;
-  padding: 1.5rem;
-}
-
-.container2 .container-text .sub-text{
-  background-color: chocolate;
-  padding: 2rem;
-  color: white;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
-}
-
-.container2 .container-text .tab h2{
-  color: black;
-  text-shadow: 2px 2px 10px black;
-}
-
-.container2 .container-text .tab img{
-  box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.492);
-  border-radius: 6px;
-}
-
-@media screen and (max-width: 760px) {
-  .collaborate{
-    padding: 3rem;
-    flex-direction: column;
-    /* height: 10rem; */
-  }
-}
-
-.collaborate{
-  background-color: rgb(197, 193, 193);
-  display: flex;
-  padding: 2rem;
-  justify-content: space-between;
-  text-align: center;
-}
-
-.collaborate img{
-  width: 5rem;
-}
-
-.collaborate .police{
-  text-align: center;
-  background-color: rgb(197, 197, 195);
-  padding: 1.5rem;
-  border-radius: 5px;
-  box-shadow: 2px 2px 8px black;
-  
-}
-
-.container3{
-  background-color: black;
-  color: white;
-  padding: 1.5rem;
-  text-align: center;
-}
-
-.container3 .enroll{
-  background-color: rgb(8, 8, 8);
-  padding: 1.5rem;
-  border-radius: 5px;
-}
-
-.container3 .enroll a{
-  text-decoration: none;
-  color: chocolate;
 }
 
 .container4{
@@ -251,4 +135,33 @@ button:hover{
 footer{
   background-color: black;
   color: white;
+}
+
+@media screen and (max-width: 760px) {
+  .collaborate{
+    padding: 3rem;
+    flex-direction: column;
+    /* height: 10rem; */
+  }
+}
+
+.collaborate{
+  background-color: rgb(197, 193, 193);
+  display: flex;
+  padding: 2rem;
+  justify-content: space-between;
+  text-align: center;
+}
+
+.collaborate img{
+  width: 5rem;
+}
+
+.collaborate .police{
+  text-align: center;
+  background-color: rgb(197, 197, 195);
+  padding: 1.5rem;
+  border-radius: 5px;
+  box-shadow: 2px 2px 8px black;
+  
 }
