--- a/css files/style.css
+++ b/css files/style.css
@@ -4,7 +4,8 @@
 }
 
 body{
-  background-color: grey;
+  /* background-color: grey; */
+  background-image: url(./images/dashboard\ pad\ \(1\).svg)
 }
 
 
