--- a/css files/sign-up.css
+++ b/css files/sign-up.css
@@ -61,7 +61,9 @@ form{
 
 .form{
   padding: 1.5rem;
-  background-color: grey;
+  /* background-color: grey; */
+  background-image: url(./images/dashboard\ pad\ \(1\).svg)
+  
 }
 
 form input{
